correction regrading to gap

--- a/css/style.css
+++ b/css/style.css
@@ -1,98 +1,92 @@
-html{
-    margin: 0;
-    padding: 0;
-    width: 1366px;
-    background: url("../img/background-image.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+html {
+  margin: 0;
+  padding: 0;
+  width: 1366px;
+  background: url("../img/background-image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    width: 1059px;
-    height: 100vh;
-    margin: 0 auto;
+body {
+  width: 1072px;
+  margin: 0 auto;
 }
 
-a{
-    text-decoration: none;
-    color: white;
-}
-
-.logo img{
-    width: 46px;
-    height: 44px;
-    
-}   
-
-
-
-.logo{
-    display: flex;
-    text-transform: uppercase;
-}
-
-.inner-logo{
-    padding-left: 15px;
-}
-
-
-.container{
-    display: flex;
-    align-items: center;
-    color: white;
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 0 68px;
     text-align: center;
-    margin: 50px 0 0 0;
+    margin-top: 50px;
+  }
+
+a, p {
+  text-decoration: none;
+  color: white;
 }
 
-header > .container{
-    justify-content: space-between;
+.logo img {
+  width: 46px;
+  height: 44px;
 }
 
-.main-text{
-    font-size: 29px;
+header > .container {
+  grid-template-columns: 1fr 6fr;
+  align-items: center;
 }
 
-.sub-text{
-    font-size: 18px;
+p {
+  font-size: 18px;
 }
 
-.contacts{
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-    text-align: right;
-    font-size: 18px;
+.main-text {
+  font-size: 29px;
 }
 
-main > .container{
-    flex-wrap: wrap;
-    gap: 0 64px;
+.sub-text {
+  font-size: 18px;
+}
+
+.contacts {
+  justify-self: end;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-gap: 5px;
+  text-align: right;
+}
+
+.logo {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  text-transform: uppercase;
+  grid-gap: 15px;
+}
+
+.logo img {
+  width: 46px;
+  height: 44px;
 }
 
 
 
-figure  img{
+figure img {
     width: 306px;
     height: 200px;
-    border: 2px solid;
-    border-color: linear-gradient(180deg, red, black);
+    border-width: 3px;
+    border-style: solid;
+    border-image: linear-gradient(180deg, white, black) 2;
 }
 
-figcaption{
-    font-size: 18px;
-    padding: 20px 0 36px 0;
+figcaption {
+  font-size: 18px;
+  padding: 20px 0 36px 0;
 }
 
-footer > .container{
-    margin: 0;
-    padding: 25px 0 20px 0;
-    justify-content: center;
+footer > .container {
+  margin: 0;
+  grid-template-columns: repeat(1, 1fr);
+  padding: 25px 0px 20px;
+  font-size: 18px;
 }
-
-
-
-
 
